src/main/java/semantic/abstractSintaxTree/test/failing/variableAccessInsideStaticMethod.ru
/? InvalidAccessInStaticContextException
struct A {pri Int a1;}
impl A{
.(){}

    st fn m1()->void{
        (a1);

    }

    fn m2() -> void{}


}

start {}